--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 
 .bg-image {
     background-image: url("../images/tori-shrine.jpg");
-    min-height: 940px;
+    height: 940px;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -57,13 +57,12 @@ nav ul li a {
     color: black;
 }
 
-a:link {
+
+a, a:hover, a:focus, a:active {
     text-decoration: none;
+    color: inherit;
 }
 
-a:visited {
-    text-decoration: none;
-}
 
 .home-wrap {
     margin: 0 auto;
@@ -95,6 +94,7 @@ a:visited {
     font-size: 36px;
     margin: 0px 15% 40px 0px;
     padding-top: 40px;
+    text-align: center;
 }
 
 #about-me h2 {
@@ -140,7 +140,7 @@ a:visited {
 .container-projects a {
     border: groove;
     border-color: rgb(20, 19, 20);
-    border-width: 10px;
+    border-width: 4px;
     padding: 10px;
     position: relative;
 }
@@ -149,7 +149,7 @@ a:visited {
     position: absolute;
     background-color:white;
     border-left: none;
-    width: 200px;
+    width: 150px;
     left: 0px;
     bottom: 30px; 
 }
@@ -160,7 +160,7 @@ a:visited {
     margin: 10px;
     min-width: 200px;
     min-height: 500px;
-    background-image: url("../../assets/images/robot.jpg");
+    background-image: url("../../assets/images/SongStar.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     transition: ease-in-out 300ms;
@@ -173,7 +173,7 @@ a:visited {
     margin: 10px;
     width: 200px;
     height: 500px;
-    background-image: url("../../assets/images/cyber-security.jpg");
+    background-image: url("../../assets/images/CodeQuiz.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     opacity: 0.7;
@@ -185,7 +185,7 @@ a:visited {
     margin: 10px;
     width: 200px;
     height: 500px;
-    background-image: url("../../assets/images/macbook.jpg");
+    background-image: url("../../assets/images/EasyPlan.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     opacity: 0.7;
@@ -221,7 +221,7 @@ a:visited {
     position: absolute;
     background-color:white;
     border-left: none;
-    width: 200px;
+    width: 150px;
     left: 0px;
     bottom: 30px;
 }
@@ -325,6 +325,51 @@ footer p span {
     }  
 }
 
+@media screen and (max-width: 768px) {
+    .box-1 {
+        height: 300px;
+    }  
+}
 
+@media screen and (max-width: 768px) {
+    .box-2 {
+        height: 300px;
+    }  
+}
 
+@media screen and (max-width: 768px) {
+    #about-me h2 {
+        font-size: medium;
+    }  
+}
 
+@media screen and (max-width: 768px) {
+    .bg-image {
+        height: 50%;
+    }  
+}
+
+@media screen and (max-width: 768px) {
+    .float-left {
+        float: none;
+    }  
+}
+
+@media screen and (max-width: 768px) {
+    #about-me h1 {
+    margin: 0px 0px 8px 0px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #about-me {
+    padding-bottom: 50px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #about-me img {
+    max-height: 260px;
+    margin-right: 30px;
+    }
+}
