--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ a, a:hover, a:focus, a:active {
     margin: 10px;
     width: 200px;
     height: 500px;
-    background-image: url("../../assets/images/EasyPlan.png");
+    background-image: url("../../assets/images/Screenshot2.JPG");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     opacity: 0.7;
